[package]
name = "leetcode-ihiro"
version = "0.1.0"
edition = "2024"

[[bin]]
name="1"
path="src/1.rs"

[[bin]]
name="9"
path="src/9.rs"

[[bin]]
name="13"
path="src/13.rs"

[[bin]]
name="67"
path="src/67.rs"

[[bin]]
name="69"
path="src/69.rs"

[[bin]]
name="3190"
path="src/3190.rs"

[[bin]]
name="14"
path="src/14.rs"

[[bin]]
name="20"
path="src/20.rs"

[[bin]]
name="26"
path="src/26.rs"

[dependencies]
