[package]
name = "leetcode-ihiro"
version = "0.1.0"
edition = "2024"

[[bin]]
name="1"
path= "src/0001_two_sum.rs"

[[bin]]
name="9"
path= "src/0009_is_palindrome.rs"

[[bin]]
name="13"
path= "src/0013_roman_to_int.rs"

[[bin]]
name="67"
path= "src/0067_add_binary.rs"

[[bin]]
name="69"
path= "src/0069_my_sqrt.rs"

[[bin]]
name="3190"
path= "src/3190_minimum_operations.rs"

[[bin]]
name="14"
path= "src/0014_longest_common_prefix.rs"

[[bin]]
name="20"
path= "src/0020_is_valid.rs"

[[bin]]
name="26"
path= "src/0026_remove_duplicates.rs"

[[bin]]
name="1018"
path= "src/1018_prefixes_div_by5.rs"

[[bin]]
name="1015"
path= "src/1015_smallest_repunit_div_by_k.rs"

[dependencies]
